--- a/catalog-management-system/src/main/resources/application.properties
+++ b/catalog-management-system/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging Configuration
 logging.level.root=INFO
+
+spring.main.allow-bean-definition-overriding=true
