--- a/catalog-management-system/src/main/resources/application.properties
+++ b/catalog-management-system/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging Configuration
 logging.level.root=INFO
+logging.level.org.springframework=DEBUG
 
 spring.main.allow-bean-definition-overriding=true
