--- a/catalog-management-system/src/main/resources/application.properties
+++ b/catalog-management-system/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.root=INFO
 logging.level.org.springframework=DEBUG
 
 spring.main.allow-bean-definition-overriding=true
+
+server.port=8082
